added the product service, dao, mapper and entity